# notifier_bot

./: .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  README.md  Taskfile.yml  alembic.ini  config.py  docker-compose.yml  logger.py  main.py  notifier_tgbot.db  pyproject.toml  test.db
.github/workflows/: cd.yml
constants/: __init__.py
core/: exceptions.py
core/ozon/: parser.py
core/repositories/: product.py  sub_product.py  subscription.py  user.py
core/schemas/: product.py  sub_product.py  user.py  user_product.py
core/services/: ozon.py  price_checker.py  product.py  subscription.py  user.py  wb.py  wb_parser.py
core/tg/: bot.py  bot_dispatcher.py  buttons.py  files.py  keyboards.py  message_texts.py  notifier_state.py  storage.py  tg_dispatcher.py
core/tg/handlers/: __init__.py  base_handler.py  choose_action_handler.py  choose_marketplace.py  delete_subscriptions_handler.py  menu.py  on_notify_handler.py  product_handler.py  show_subscriptions_handler.py  start_handler.py  subscription_existing_handler.py  subscription_handler.py
core/tg/middlewares/: services.py
core/value_objects/: price_change.py
core/wb/: __init__.py  utils.py  wb_img_downloader.py  wb_parser.py
db/: __init__.py  init.sh  queries.py
db/models/: __init__.py  product.py  user.py  user_product.py
infrastructure/: scheduler.py  tasks.py
infrastructure/db/models/: __init__.py  base.py  product.py  user.py  user_product.py
infrastructure/db/repositories/: product.py  sub_product.py  subscription.py  user.py
migration/: env.py
migration/versions/: 2023_11_06_1701-3e4a52d34924_init.py  2023_12_29_2103-d5e4d34831da_added_to_prodcut_model_title.py  2023_12_29_2114-8d921dbd65d9_added_to_prodcut_model_title.py  2024_01_13_1850-ecdd30c487d0_add_constrains.py  2024_03_16_1022-4ee8e981333c_user_added_chat_id.py  2024_12_21_1108-6508e9988465_prod_add_field_mp_type.py
nginx/: default.conf
schemas/: __init__.py  product.py  user.py  user_product.py
tests/: conftest.py  pytest.ini
tests/integration_tests/: __init__.py
tests/integration_tests/wb/: test_sub.py
tests/unit_tests/: conftest.py  test_price_checker_service.py  test_product_service.py  test_sub_service.py  test_user_service.py  test_wb_service.py
tests/unit_tests/db/: conftest.py  test_db.py
tests/unit_tests/ozon/: conftest.py  test_parser.py
tests/unit_tests/wb/: conftest.py  test_utils.py  test_wb_img_downloader.py  test_wb_img_service.py  test_wb_parser.py  test_wb_product_info_service.py
utils/: __init__.py  iterable.py  response.py  transform_types.py  types.py  validators.py
