[tool.poetry]
name = "notifier-tg-bot"
version = "0.1.0"
description = ""
authors = ["hopelessdreamer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
aiogram = "3.10.0"
aiohttp = ">=3.8.5"
aiosignal = "1.3.1"
alembic = "1.11.2"
annotated-types = "0.6.0"
async-timeout = "4.0.3"
asyncstdlib = "3.10.9"
attrs = "23.1.0"
automat = "22.10.0"
babel = "2.9.1"
certifi = ">=2023.5.7"
cffi = "1.16.0"
charset-normalizer = "3.1.0"
constantly = "15.1.0"
cryptography = "41.0.4"
cssselect = "1.2.0"
fake-useragent = "1.3.0"
filelock = "3.12.4"
flupy = "1.2.0"
frozenlist = "1.4.0"
greenlet = "2.0.2"
hyperlink = "21.0.0"
idna = "3.4"
incremental = "22.10.0"
iniconfig = "2.0.0"
itemadapter = "0.8.0"
itemloaders = "1.1.0"
jmespath = "1.0.1"
loguru = "0.7.0"
lxml = "4.9.3"
magic-filter = "1.0.12"
mako = "1.2.4"
markupsafe = "2.1.3"
multidict = "6.0.4"
packaging = "23.1"
parse = "1.20.0"
parsel = "1.8.1"
pluggy = "1.2.0"
protego = "0.3.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.6"
pydispatcher = "2.0.7"
pyopenssl = "23.2.0"
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
pytest-dotenv = "0.5.2"
python-dotenv = "1.0.0"
pytz = "2023.3"
queuelib = "1.6.2"
requests = "2.30.0"
requests-file = "1.5.1"
service-identity = "23.1.0"
six = "1.16.0"
sqlalchemy = "2.0.8"
tldextract = "5.0.1"
twisted = "22.10.0"
typing-extensions = "4.9.0"
urllib3 = "2.0.2"
w3lib = "2.1.2"
yarl = "1.9.2"
zope-interface = "6.1"
ruff = "0.7.4"
ruff-lsp = "0.0.58"
mypy = "^1.8.0"
pydevd-pycharm = ">=233.13135.95,<233.13136.0"
pre-commit = "^3.6.1"
pytest-mock = "^3.14.0"
debugpy = "^1.8.5"
faststream = {extras = ["cli", "rabbit"], version = "^0.5.28"}
taskiq-faststream = {extras = ["rabbit"], version = "^0.2.0"}
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
extend-exclude = [
    "venv", "tests", "migration"
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "N",
    "B",
    "UP",
    "ARG",
    "C4",
    "SIM",
    "T20"
]

[tool.ruff.format]
quote-style = "single"


[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
#disallow_any_unimported = true
warn_return_any = true
ignore_missing_imports = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*", "migration.*"]
ignore_errors = true
